--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head lang="en">
   <title>React typescript starter 1</title>
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  />
+
 </html>
 <body>
   <div id="app-root">App is loading...</div>
